force-app/main/default/objects/CARE_Batch_Staging__c/CARE_Batch_Staging__c.object-meta.xml
<CustomObject>
    <label>CARE Batch Staging</label>
    <nameField>
        <displayFormat>CBS-{000000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Batch Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>