force-app/main/default/objects/CARE_Batch_Staging__c/fields/APPLICANT_NAME__c.field-meta.xml
<CustomField>
    <fullName>APPLICANT_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APPLICANT NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>