force-app/main/default/objects/CARE_Batch_Staging__c/fields/Bulk_Upload_History__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>optional lookup field pointing to the EI_BULK_UPLOAD_HISTORY__C record</description>
    <label>Bulk Upload History</label>
    <referenceTo>EI_Bulk_Upload_History__c</referenceTo>
    <relationshipLabel>CARE Batch Staging</relationshipLabel>
    <relationshipName>CARE_Batch_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>