force-app/main/default/objects/CARE_Batch_Staging__c/fields/CARE_BILLING_ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_BILLING_ACCT_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BILLING ACCT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>