force-app/main/default/objects/CARE_Batch_Staging__c/fields/Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>