force-app/main/default/objects/CARE_Batch_Staging__c/fields/DISCOUNT_Type__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DISCOUNT Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>