force-app/main/default/objects/CARE_Batch_Staging__c/fields/EI_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>EI_ACCOUNT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EI ACCOUNT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE Batch Staging</relationshipLabel>
    <relationshipName>CARE_Batch_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>