force-app/main/default/objects/CARE_Batch_Staging__c/fields/End_Use__c.field-meta.xml
<CustomField>
    <fullName>End_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>