force-app/main/default/objects/CARE_Batch_Staging__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>