force-app/main/default/objects/CARE_Batch_Staging__c/fields/GAS_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>GAS_SA_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GAS SA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>