force-app/main/default/objects/CARE_Batch_Staging__c/fields/JOB_NO__c.field-meta.xml
<CustomField>
    <fullName>JOB_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JOB NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>