force-app/main/default/objects/CARE_Batch_Staging__c/fields/Processing_Message__c.field-meta.xml
<CustomField>
    <fullName>Processing_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>