force-app/main/default/objects/CARE_Batch_Staging__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <defaultValue>&quot;Loaded&quot;</defaultValue>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loaded</fullName>
                <default>true</default>
                <label>Loaded</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>