force-app/main/default/objects/CARE_Batch_Staging__c/fields/SMS_App_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>SMS_App_Source_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS App Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>