force-app/main/default/objects/CARE_Batch_Staging__c/fields/Source_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Channel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>